Closed
Bug 646429
Opened 14 years ago
Closed 14 years ago
TI: Assertion failure: Call site vanished., at ./methodjit/Retcon.cpp:112
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Unassigned)
References
Details
(Keywords: assertion, testcase)
The following code asserts on TI tip (run with -n -m -a), tested on 64 bit:
var summary = 'foo';
var summary = summary.BUGNUMBER--;
Comment 1•14 years ago
|
||
JSOP_PROPINC and friends would call a separate stub when the incoming value is a known non-object. This is unnecessary; we now only call the stub if JS_MONOIC is undefined, and let jsop_getprop take care of the non-object cases (and emit the needed recompilation rejoin points).
http://hg.mozilla.org/projects/jaegermonkey/rev/d8c960080f06
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•