[INFER] Don't use a stub call in PROPINC on known non-objects, bug 646429.